@@ -1032,7 +1032,8 @@ void EventHandler::handleEvent(Event::Type event, int state)
         myOSystem->settings().saveConfig();
 
         // Go back to the launcher, or immediately quit
-        if(myOSystem->settings().getBool("uselauncher"))
+        if(myOSystem->settings().getBool("exitlauncher") ||
+           myOSystem->launcherUsed())
         {
           myOSystem->deleteConsole();
           myOSystem->createLauncher();
